Finished the extended billboard assignment
, each top ten song has their own html page

--- a/Week11Ex/Billboard_Extended/1.htm
+++ b/Week11Ex/Billboard_Extended/1.htm
@@ -11,9 +11,8 @@
             <tr>
                 <!-- The first header cell will be for album images-->
                 <th></th>
-                <th>Album Title<th>
+                <th>Album Title</th>
                 <th>Artist</th>
-               
             </tr>
 
             <tr>
@@ -26,8 +25,7 @@
         <table class="trackTable">
             <tr>
                 <th>Track No.</th>
-                <th>Title
-                <th>
+                <th>Title</th>
             </tr>
 
             <tr>
@@ -79,7 +77,6 @@
                 <td style="text-align: right; padding-right: 15px;"> 10 </td>
                 <td style="text-align: left; padding-right: 15px;"> Sevillania </td>
             </tr>
-
         </table>
     </body>
 </html>
